--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,28 +1,26 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
-
-on:
-  push:
-  pull_request:
-
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: gradle
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Gradle Info
-        run: ./gradlew -version
-      - name: Build with Gradle
-        run: ./gradlew build
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        cache: gradle
+        distribution: temurin
+        java-version: '11'
+    - continue-on-error: true
+      name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - continue-on-error: true
+      name: Gradle Info
+      run: ./gradlew -version
+    - continue-on-error: true
+      name: Build with Gradle
+      run: ./gradlew build
+name: Java CI with Gradle
+on:
+  repository_dispatch:
+    types: trigger-ga___gradle.yml
